# wzlibpd

./: pyproject.toml
crawler/: scrapy.cfg
crawler/wzlcrawler/: items.py  middlewares.py  pipelines.py  settings.py
crawler/wzlcrawler/spiders/: books1.json.0.zst  books1.py  books1all.json.2.zst  books1all.py  books2.json.zst  books2.py  books2related.json.zst  books2related.py  download.sh  f1.txt  f2.txt  ff.txt
uploader/: .gitignore  20240409T011745Z.index.tsv  _gen.py  gen1.py  gen2.py  repl.py  wzliboyjy-indices.20240423T232347Z.tsv
