[tool.poetry]
name = "wzlibpd"
version = "0.1.0"
description = ""
authors = ["Hung-I <whygowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.10.1"
furl = "^2.1.3"
zhconv-rs = "^0.3.0"
pywikibot = "^9.0.0"
pyyaml = "^6.0.1"
requests = {extras = ["socks"], version = "^2.31.0"}


[tool.poetry.group.dev.dependencies]
pyink = "^23.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
